--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<input type="text" name="email" placeholder="your Email">
 					</div>
 					<div class="comment-layer">
-						<input type="textarea" name="commentPlace" placeholder="Write Your Comment Here">
+						<textarea  name="commentPlace" class="textarea" placeholder="Write Your Comment Here"></textarea>
 					</div>
 					<div class="comment-layer">
 						<button>SEND MESSAGE</button>
@@ -56,21 +56,25 @@
 		</div>
 		<div class="about">
 			<div class="top">
-				<div class="top title"><h1>ABOUT</h1></div>
-				<div class="top word">
+				<div class="title"><h1>ABOUT</h1></div>
+				<div class="word">
 					Lorem Ipsum is simply dummy text of the printing and typesetting<br> industry.Lorem Ipsum has been the industry's standard dummy<br>text ever since the 1500s.
 				</div>
 			</div>
 			<div class="middle">
 				<div class="us">
-					<div class="us tittle">
+					<div class="tittle">
 						<h1>A WORD ABOUT US</h1>
 					</div>
-					<div class="us content">
-						Praesent dignissim viverra est,sed<br> bibendum ligula congue non.Sed ac nisl<br>
-						et felis gravida commodo?Suspendisse<br>
-						eget ullamcorper ipsum.Suspendisse<br>
-						diam amet.
+					<div class="content">
+						<div class="content-layer"></div>
+						<div class="context">
+							Praesent dignissim viverra est,sed<br> bibendum ligula congue non.Sed ac nisl<br>
+							et felis gravida commodo?Suspendisse<br>
+							eget ullamcorper ipsum.Suspendisse<br>
+							diam amet.
+						</div>
+						
 						<div>
 							<button>EXPLORE</button>
 						</div>
@@ -84,29 +88,75 @@
 					</div>
 				</div>
 				<div class="number">
-					<div class="number students">
-						70000
-						<div class="line"></div>
-						Students
+					<div class="students">
+						<div class="num">70000</div>
+						<div class="peo">Students</div>
 					</div>
-					<div class="number faculty">
-						600
-						Faculty
+					<div class="faculty">
+						<div class="num">600</div>
+						<div class="peo">Faculty</div>
 					</div>
 				</div>
 			</div>
-			<div class="about-bottom">
-				<div class="">
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
+			<div class="bottom">
+				<div class="facility">
+					<div class="facility-con facility-pic">
+						<img src="images/b1.jpg">
+					</div>
+					<div class="facility-con facility-instruc">
+						<h1>Library</h1>
+
+						<div class="brief">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+
+						<div class="detail">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unkown printer took a gallery of type and scrambled it to make a type specimen book.</div>
+
+						<div class="btn">
+							<button>EXPLORE</button>
+						</div>
+					</div>
+					<div class="facility-con facility-pic">
+						<img src="images/b2.jpg">
+					</div>
+					<div  class="facility-con facility-instruc">
+						<h1>Computer Lab</h1>
+
+						<div class="brief">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+						<div class="detail">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unkown printer took a gallery of type and scrambled it to make a type specimen book.</div>
+
+						<div class="btn">
+							<button>EXPLORE</button>
+						</div>
+					</div>
 				</div>
-				<div class="">
-					<div></div>
-					<div></div>
-					<div></div>
-					<div></div>
+				<div class="facility">
+					<div  class="facility-con facility-instruc">
+						<h1>Conference Hall</h1>
+
+						<div class="brief">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+
+						<div class="detail">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unkown printer took a gallery of type and scrambled it to make a type specimen book.</div>
+
+						<div class="btn">
+							<button>EXPLORE</button>
+						</div>
+					</div>
+					<div class="facility-con facility-pic">
+						<img src="images/b3.jpg">
+					</div>
+					<div  class="facility-con facility-instruc">
+						<h1>Play Ground</h1>
+
+						<div class="brief">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+
+						<div class="detail">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unkown printer took a gallery of type and scrambled it to make a type specimen book.</div>
+						
+						<div class="btn">
+							<button>EXPLORE</button>
+						</div>
+					</div>
+					<div class="facility-con facility-pic">
+						<img src="images/b4.jpg">
+					</div>
 				</div>
 			</div>
 			
